[package]
name = "async-spawner"
version = "2.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "executor independent task spawner"
repository = "https://github.com/dvc94ch/async-spawner"

[dependencies]
async-channel = "1.5.1"
futures-util = { version = "0.3.8", default-features = false }
once_cell = "1.5.2"

async-std = { version = "1.7.0", features = ["attributes", "unstable"], optional = true }
tokio = { version = "1.1.1", features = ["macros", "rt-multi-thread"], optional = true }


[dev-dependencies]
async-spawner = { path = ".", features = ["async-std", "tokio"] }
async-std = { version = "1.7.0", features = ["attributes", "unstable"] }
tokio = { version = "1.1.1", features = ["macros", "rt-multi-thread"] }
