[package]
name = "agnostic_async_executor"
version = "0.2.2"
authors = ["Pablo Guerrero <siriux@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Agnostic Rust Async Executor"
repository = "https://github.com/siriux/agnostic_async_executor"
documentation = "https://docs.rs/agnostic_async_executor"
categories = ["asynchronous", "wasm"]
keywords = ["executor", "async", "agnostic", "wasm"]

[features]
async_std_executor = ["async-std", "block_on"]
tokio_executor = ["tokio/rt-multi-thread", "futures/executor", "block_on"]
smol_executor = ["async-executor", "num_cpus", "async-channel", "blocking", "futures-lite", "easy-parallel", "block_on"]
futures_executor = ["futures/thread-pool", "block_on"]
wasm_bindgen_executor = ["wasm-bindgen-futures", "futures/std"]
time = []
async_std_executor_with_time = ["async_std_executor", "time"]
tokio_executor_with_time = ["tokio_executor", "time", "tokio/time"]
smol_executor_with_time = ["smol_executor", "time", "async-io"]
futures_executor_with_time = ["futures_executor", "time", "async-timer"]
wasm_bindgen_executor_with_time = ["wasm_bindgen_executor", "time", "wasm-bindgen", "js-sys", "futures/async-await", "send_wrapper"]
block_on = []
stream = ["futures-core", "async-stream"]
test = ["async-oneshot", "concurrent-queue"]

[dependencies]
once_cell =  "^1.8.0"
futures = { version = "^0.3.18", default-features = false, optional = true }
async-std = { version = "^1.10.0", features = ["unstable"], optional = true }
tokio = { version = "^1.14", features = ["macros"], optional = true }
async-executor = { version = "^1.4", optional = true }
num_cpus = { version = "^1.13", optional = true }
async-channel = { version = "^1.6.1", optional = true }
easy-parallel = { version = "^3.1", optional = true }
blocking = { version = "^1.1", optional = true }
futures-lite = { version = "^1.12", optional = true }
wasm-bindgen-futures = { version = "^0.4", optional = true }
async-io = { version = "^1.6", optional = true }
async-timer = { version = "^1.0.0-beta.7", optional = true }
wasm-bindgen = { version = "^0.2.7", optional = true }
js-sys  = { version = "^0.3", optional = true }
send_wrapper = { version = "^0.5", optional = true }
concurrent-queue = { version = "^1.2", optional = true }
async-oneshot = { version = "^0.5.0", optional = true }
async-stream = { version = "^0.3.2", optional = true }
futures-core = { version = "^0.3.18", optional = true }

# For wasm testing comment dev-dependencies and run: wasm-pack test --firefox --headless
# Otherwise comment wasm32 dev-dependencies and run: cargo test
# This might change when this is fixed https://github.com/rustwasm/wasm-pack/issues/698

[dev-dependencies]
agnostic_async_executor = { path = ".", features = ["test", "async_std_executor_with_time", "tokio_executor_with_time", "smol_executor_with_time", "futures_executor_with_time", "block_on", "stream"] }

# [target.wasm32-unknown-unknown.dev-dependencies]
# agnostic_async_executor = { path = ".", features = ["test", "wasm_bindgen_executor_with_time", "stream"] }
# wasm-bindgen-test = "^0.3"

[package.metadata.docs.rs]
features = ["test", "async_std_executor_with_time", "tokio_executor_with_time", "smol_executor_with_time", "futures_executor_with_time", "wasm_bindgen_executor_with_time", "block_on", "stream"]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]